upgrade to Tensorflow 2.2.0

--- a/notebooks/ml/Distributed_Training/mirrored_strategy/mirroredstrategy_simulated_data_example.ipynb
+++ b/notebooks/ml/Distributed_Training/mirrored_strategy/mirroredstrategy_simulated_data_example.ipynb
@@ -14,7 +14,7 @@
     "</a></h1> \n",
     "</p>\n",
     "\n",
-    "![hops.png](../../../images/hops.png)\n",
+    "![hops.png](../../images/hops.png)\n",
     "\n",
     "## The `hops` python module\n",
     "\n",
@@ -75,7 +75,7 @@
     "As demonstrated in the gif it provides general information about the experiment and the resulting metric. Experiments can be visualized meanwhile or after training in a TensorBoard.\n",
     "<br>\n",
     "<br>\n",
-    "![Image7-Monitor.png](../../../images/experiments.gif)"
+    "![Image7-Monitor.png](../../images/experiments.gif)"
    ]
   },
   {
@@ -94,7 +94,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>69</td><td>application_1594231828166_0156</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://resourcemanager.service.consul:8088/proxy/application_1594231828166_0156/\">Link</a></td><td><a target=\"_blank\" href=\"http://sn021.dli.zenuity.com:8042/node/containerlogs/container_e08_1594231828166_0156_01_000001/demo__davit000\">Link</a></td></tr></table>"
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>93</td><td>application_1594231828166_0180</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://resourcemanager.service.consul:8088/proxy/application_1594231828166_0180/\">Link</a></td><td><a target=\"_blank\" href=\"http://sn021.dli.zenuity.com:8042/node/containerlogs/container_e08_1594231828166_0180_01_000001/demo__davit000\">Link</a></td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -110,7 +110,7 @@
       "SparkSession available as 'spark'.\n",
       "Finished Experiment \n",
       "\n",
-      "('hdfs://rpc.namenode.service.consul:8020/Projects/demo/Experiments/application_1594231828166_0156_1', {'metric': [0.6993436217308044, 0.5029296875], 'log': 'Experiments/application_1594231828166_0156_1/chief_0_output.log'})"
+      "('hdfs://rpc.namenode.service.consul:8020/Projects/demo/Experiments/application_1594231828166_0180_1', {'accuracy': 0.640625, 'log': 'Experiments/application_1594231828166_0180_1/chief_0_output.log'})"
      ]
     }
    ],
@@ -154,10 +154,8 @@
     "        model.add(tf.keras.layers.Dense(1, activation='sigmoid'))\n",
     "\n",
     "        # Compile the model.\n",
-    "        optimizer = tf.keras.optimizers.Adam(0.001) \n",
-    "        # Compile the model.\n",
     "        model.compile(loss=tf.keras.losses.BinaryCrossentropy(),\n",
-    "                      optimizer=tf.keras.optimizers.Adam(),\n",
+    "                      optimizer=tf.keras.optimizers.Adam(0.001),\n",
     "                      metrics=['accuracy']\n",
     "                     )\n",
     "        \n",
@@ -172,10 +170,14 @@
     "        validation_data=input_fn(),\n",
     "        callbacks=callbacks\n",
     "    )\n",
-    "    return model.evaluate(input_fn())\n",
+    "\n",
+    "    score = model.evaluate(input_fn(), steps=1)\n",
+    "    metrics = {'accuracy': score[1]}\n",
+    "\n",
+    "    return metrics    \n",
     "\n",
     "from hops import experiment\n",
-    "experiment.mirrored(mirrored_training)"
+    "experiment.mirrored(mirrored_training,  name='random data model', local_logdir=True, metric_key='accuracy')"
    ]
   },
   {
