--- a/notebooks/ml/End_To_End_Pipeline/tensorflow/model_repo_and_serving.ipynb
+++ b/notebooks/ml/End_To_End_Pipeline/tensorflow/model_repo_and_serving.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,94 +112,60 @@
     "\n",
     "    from hops import model as hops_model\n",
     "    from hops import hdfs\n",
+    "\n",
+    "    import pydoop.hdfs as pydoop\n",
     "    \n",
-    "    batch_size = 8\n",
+    "\n",
+    "    batch_size=32\n",
     "    num_classes = 10\n",
-    "    epochs = 3\n",
-    "    kernel = 4\n",
-    "    pool = 4\n",
-    "    dropout = 0.5\n",
-    "#################################################################################\n",
-    "#     # Input image dimensions\n",
-    "#     img_rows, img_cols = 28, 28\n",
     "\n",
-    "#     # The data, shuffled and split between train and test sets\n",
-    "#     (x_train, y_train), (x_test, y_test) = mnist.load_data()\n",
-    "\n",
-    "#     if K.image_data_format() == 'channels_first':\n",
-    "#         x_train = x_train.reshape(x_train.shape[0], 1, img_rows, img_cols)\n",
-    "#         x_test = x_test.reshape(x_test.shape[0], 1, img_rows, img_cols)\n",
-    "#         input_shape = (1, img_rows, img_cols)\n",
-    "#     else:\n",
-    "#         x_train = x_train.reshape(x_train.shape[0], img_rows, img_cols, 1)\n",
-    "#         x_test = x_test.reshape(x_test.shape[0], img_rows, img_cols, 1)\n",
-    "#         input_shape = (img_rows, img_cols, 1)\n",
-    "\n",
-    "#     x_train = x_train.astype('float32')\n",
-    "#     x_test = x_test.astype('float32')\n",
-    "#     x_train /= 255\n",
-    "#     x_test /= 255\n",
-    "#     print('x_train shape:', x_train.shape)\n",
-    "#     print(x_train.shape[0], 'train samples')\n",
-    "#     print(x_test.shape[0], 'test samples')\n",
-    "\n",
-    "#     # Convert class vectors to binary class matrices\n",
-    "#     y_train = keras.utils.to_categorical(y_train, num_classes)\n",
-    "#     y_test = keras.utils.to_categorical(y_test, num_classes)\n",
-    "\n",
-    "#     model = Sequential()\n",
-    "#     model.add(Conv2D(32, kernel_size=(kernel, kernel),\n",
-    "#                         activation='relu',\n",
-    "#                          input_shape=input_shape))\n",
-    "#     model.add(Conv2D(64, (kernel, kernel), activation='relu'))\n",
-    "#     model.add(MaxPooling2D(pool_size=(pool, pool)))\n",
-    "#     model.add(Dropout(dropout))\n",
-    "#     model.add(Flatten())\n",
-    "#      model.add(Dense(128, activation='relu'))\n",
-    "\n",
-    "#     model.add(Dropout(dropout))\n",
-    "#     model.add(Dense(num_classes, activation='softmax'))\n",
-    "\n",
-    "#     opt = keras.optimizers.Adadelta(1.0)\n",
-    "\n",
-    "#     model.compile(loss=keras.losses.categorical_crossentropy,\n",
-    "#                       optimizer=opt,\n",
-    "#                       metrics=['accuracy'])\n",
-    "\n",
-    "\n",
-    "#     tb_callback = TensorBoard(log_dir=tensorboard.logdir(), histogram_freq=0,\n",
-    "#                              write_graph=True, write_images=True)\n",
-    "#     callbacks = [tb_callback]\n",
-    "\n",
-    "#     model.fit(x_train, y_train,\n",
-    "#              batch_size=batch_size,\n",
-    "#              callbacks=callbacks,\n",
-    "#              epochs=epochs,\n",
-    "#              verbose=1,\n",
-    "#              validation_data=(x_test, y_test))\n",
-    "#     score = model.evaluate(x_test, y_test, verbose=0)\n",
-    "\n",
-    "\n",
+    "    \n",
+    "    # Provide path to train and validation datasets\n",
+    "    train_filenames = [hdfs.project_path() + \"TourData/mnist/train/train.tfrecords\"]\n",
+    "    validation_filenames = [hdfs.project_path() + \"TourData/mnist/validation/validation.tfrecords\"]\n",
+    "    \n",
     "    # Define input function\n",
-    "    def input_fn():\n",
-    "      x = np.random.random((1024, 10))\n",
-    "      y = np.random.randint(2, size=(1024, 1))\n",
-    "      x = tf.cast(x, tf.float32)\n",
-    "      dataset = tf.data.Dataset.from_tensor_slices((x, y))\n",
-    "      dataset = dataset.repeat(500)\n",
-    "      dataset = dataset.batch(batch_size)\n",
-    "      return dataset\n",
+    "    def data_input(filenames, batch_size=128, num_classes = 10, shuffle=False, repeat=None):\n",
+    "\n",
+    "        def parser(serialized_example):\n",
+    "            \"\"\"Parses a single tf.Example into image and label tensors.\"\"\"\n",
+    "            features = tf.io.parse_single_example(\n",
+    "                serialized_example,\n",
+    "                features={\n",
+    "                    'image_raw': tf.io.FixedLenFeature([], tf.string),\n",
+    "                    'label': tf.io.FixedLenFeature([], tf.int64),\n",
+    "                })\n",
+    "            image = tf.io.decode_raw(features['image_raw'], tf.uint8)\n",
+    "            image.set_shape([28 * 28])\n",
+    "\n",
+    "            # Normalize the values of the image from the range [0, 255] to [-0.5, 0.5]\n",
+    "            image = tf.cast(image, tf.float32) / 255 - 0.5\n",
+    "            label = tf.cast(features['label'], tf.int32)\n",
+    "    \n",
+    "            # Create a one hot array for your labels\n",
+    "            label = tf.one_hot(label, num_classes)\n",
+    "            \n",
+    "            return image, label\n",
+    "\n",
+    "        # Import MNIST data\n",
+    "        dataset = tf.data.TFRecordDataset(filenames)\n",
+    "\n",
+    "        # Map the parser over dataset, and batch results by up to batch_size\n",
+    "        dataset = dataset.map(parser)\n",
+    "        if shuffle:\n",
+    "            dataset = dataset.shuffle(buffer_size=128)\n",
+    "        dataset = dataset.batch(batch_size, drop_remainder=True)\n",
+    "        dataset = dataset.repeat(repeat)\n",
+    "        return dataset\n",
     "\n",
     "    # Define a Keras Model.\n",
     "    model = tf.keras.Sequential()\n",
-    "    model.add(tf.keras.layers.Dense(16, activation='relu', input_shape=(10,)))\n",
-    "    model.add(tf.keras.layers.Dense(1, activation='sigmoid'))\n",
+    "    model.add(tf.keras.layers.Dense(128, activation='relu', input_shape=(784,)))\n",
+    "    model.add(tf.keras.layers.Dense(num_classes, activation='softmax'))\n",
     "\n",
     "    # Compile the model.\n",
-    "    optimizer = tf.keras.optimizers.Adam(0.001) \n",
-    "    # Compile the model.\n",
-    "    model.compile(loss=tf.keras.losses.BinaryCrossentropy(),\n",
-    "                  optimizer=tf.keras.optimizers.Adam(),\n",
+    "    model.compile(loss=tf.keras.losses.categorical_crossentropy,\n",
+    "                  optimizer= tf.keras.optimizers.Adam(0.001),\n",
     "                  metrics=['accuracy']\n",
     "                 )\n",
     "        \n",
@@ -207,15 +173,16 @@
     "        tf.keras.callbacks.TensorBoard(log_dir=tensorboard.logdir()),\n",
     "        tf.keras.callbacks.ModelCheckpoint(filepath=tensorboard.logdir()),\n",
     "    ]\n",
-    "    model.fit(input_fn(), \n",
+    "    model.fit(data_input(train_filenames, batch_size), \n",
     "        verbose=0,\n",
     "        epochs=3, \n",
     "        steps_per_epoch=5,\n",
-    "        validation_data=input_fn(),\n",
+    "        validation_data=data_input(validation_filenames, batch_size),\n",
+    "        validation_steps=1,                    \n",
     "        callbacks=callbacks\n",
     "    )\n",
     "    \n",
-    "    score = model.evaluate(input_fn())\n",
+    "    score = model.evaluate(data_input(validation_filenames, batch_size), steps=1)\n",
     "\n",
     "    # Export model\n",
     "    # WARNING(break-tutorial-inline-code): The following code snippet is\n",
@@ -225,37 +192,37 @@
     "    export_path = os.getcwd() + '/model-' + str(uuid.uuid4())\n",
     "    print('Exporting trained model to: {}'.format(export_path))\n",
     "    \n",
-    "#     tf.keras.models.save_model(\n",
-    "#         model,\n",
-    "#         export_path,\n",
-    "#         overwrite=True,\n",
-    "#         include_optimizer=True,\n",
-    "#         save_format=None,\n",
-    "#         signatures=None,\n",
-    "#         options=None\n",
-    "#     )\n",
-    "    \n",
     "    tf.saved_model.save(model, export_path)\n",
     "\n",
     "    print('Done exporting!')\n",
     "    \n",
     "    metrics = metrics={'accuracy': score[1]}\n",
     "    \n",
-    "    hops_model.export(export_path, \"fakedataB\", metrics=metrics)    \n",
+    "    hops_model.export(export_path, \"mnist\", metrics=metrics)    \n",
     "    \n",
     "    return metrics"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished Experiment \n",
+      "\n",
+      "('hdfs://rpc.namenode.service.consul:8020/Projects/demo/Experiments/application_1594231828166_0176_4', {'accuracy': 0.59375, 'log': 'Experiments/application_1594231828166_0176_4/output.log'})"
+     ]
+    }
+   ],
    "source": [
     "from hops import experiment\n",
     "from hops import hdfs\n",
     "\n",
-    "experiment.launch(keras_mnist, name='keras fake data', local_logdir=True, metric_key='accuracy')"
+    "experiment.launch(keras_mnist, name='mnist model', local_logdir=True, metric_key='accuracy')"
    ]
   },
   {
@@ -288,19 +255,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "from hops import model\n",
     "from hops.model import Metric\n",
-    "MODEL_NAME=\"fakedataB\"\n",
+    "MODEL_NAME=\"mnist\"\n",
     "EVALUATION_METRIC=\"accuracy\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,16 +276,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model name: fakedata\n",
+      "Model name: mnist\n",
       "Model version: 1\n",
-      "{'accuracy': '0.48828125'}"
+      "{'accuracy': '0.59375'}"
      ]
     }
    ],
@@ -337,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,15 +313,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating a serving for model fakedata ...\n",
-      "Serving for model fakedata successfully created"
+      "Creating a serving for model mnist ...\n",
+      "Serving for model mnist successfully created"
      ]
     }
    ],
@@ -367,14 +334,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fakedata\n",
       "mnist"
      ]
     }
@@ -387,14 +353,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'Running'"
+      "'Stopped'"
      ]
     }
    ],
@@ -426,9 +392,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting serving with name: mnist...\n",
+      "Serving with name: mnist successfully started"
+     ]
+    }
+   ],
    "source": [
     "if serving.get_status(MODEL_NAME) == 'Stopped':\n",
     "    serving.start(MODEL_NAME)"
@@ -436,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,39 +430,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "TOPIC_NAME = serving.get_kafka_topic(MODEL_NAME)\n",
-    "NUM_FEATURES=1024"
+    "NUM_FEATURES=784"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "An error was encountered:\n",
-      "Could not create or update serving (url: /hopsworks-api/api/project/128/inference/models/fakedata:predict), server response: \n",
-      " HTTP code: 400, HTTP reason: Bad Request, error code: 250008, error msg: Serving instance bad request error, user msg: { \"error\": \"Matrix size-incompatible: In[0]: [1,1024], In[1]: [10,16]\\n\\t [[{{node sequential/dense/Relu}}]]\" }\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/srv/hops/anaconda/envs/theenv/lib/python3.6/site-packages/hops/serving.py\", line 527, in make_inference_request\n",
-      "    return _make_inference_request_rest(serving_name, data, verb)\n",
-      "  File \"/srv/hops/anaconda/envs/theenv/lib/python3.6/site-packages/hops/serving.py\", line 562, in _make_inference_request_rest\n",
-      "    error_code, error_msg, user_msg))\n",
-      "hops.exceptions.RestAPIError: Could not create or update serving (url: /hopsworks-api/api/project/128/inference/models/fakedata:predict), server response: \n",
-      " HTTP code: 400, HTTP reason: Bad Request, error code: 250008, error msg: Serving instance bad request error, user msg: { \"error\": \"Matrix size-incompatible: In[0]: [1,1024], In[1]: [10,16]\\n\\t [[{{node sequential/dense/Relu}}]]\" }\n",
-      "\n"
+      "{'predictions': [[0.00101464614, 0.124517113, 0.63427788, 0.0163144395, 0.0894692615, 0.00116351154, 0.060454987, 0.00864500459, 0.061855197, 0.0022879669]]}\n",
+      "{'predictions': [[0.00191850925, 0.167059571, 0.551065922, 0.0121973753, 0.101200588, 0.00293193664, 0.0549961925, 0.0213383641, 0.0848787874, 0.00241268263]]}\n",
+      "{'predictions': [[0.00050952629, 0.151139811, 0.556290507, 0.0104385419, 0.19585146, 0.000732801796, 0.0148065677, 0.028437674, 0.0396146365, 0.00217843778]]}\n",
+      "{'predictions': [[0.00132977683, 0.165724203, 0.596280158, 0.0154176438, 0.117487162, 0.000765851699, 0.0309293475, 0.0118588647, 0.0586582385, 0.00154881517]]}\n",
+      "{'predictions': [[0.0010584885, 0.126143798, 0.453216463, 0.0139270639, 0.23464562, 0.0021353832, 0.0354398228, 0.0268977303, 0.101747505, 0.00478807]]}\n",
+      "{'predictions': [[0.00129793282, 0.10362123, 0.4327223, 0.0191204343, 0.296470761, 0.00151372841, 0.0267837606, 0.00829808, 0.105536826, 0.00463500666]]}\n",
+      "{'predictions': [[0.000682579936, 0.114368267, 0.538814, 0.00784003, 0.199453488, 0.00151150499, 0.030661013, 0.0139077725, 0.08991687, 0.00284440466]]}\n",
+      "{'predictions': [[0.000656837947, 0.0822406784, 0.717460692, 0.00662791263, 0.0756253153, 0.000680917408, 0.0238178242, 0.00388909853, 0.0873425603, 0.00165810366]]}\n",
+      "{'predictions': [[0.000649773749, 0.178170785, 0.654825389, 0.00969067682, 0.0924373269, 0.000525904296, 0.0229914766, 0.00463350257, 0.0342777297, 0.00179741206]]}\n",
+      "{'predictions': [[0.000734140864, 0.0979306921, 0.637276947, 0.00539853284, 0.174462378, 0.000809073157, 0.0260299761, 0.0069808159, 0.0488583036, 0.00151915126]]}\n",
+      "{'predictions': [[0.00114852609, 0.0499146283, 0.756860316, 0.017711699, 0.0892188549, 0.00113097276, 0.01615295, 0.00969913, 0.0566330738, 0.00152997614]]}\n",
+      "{'predictions': [[0.00153077045, 0.122967966, 0.662966549, 0.0150937466, 0.0971821472, 0.00201104418, 0.0421369113, 0.0120321661, 0.0413411036, 0.00273760478]]}\n",
+      "{'predictions': [[0.00274692359, 0.0863644779, 0.526040792, 0.0319046862, 0.150395423, 0.00108450756, 0.0278904028, 0.0123740099, 0.158668086, 0.00253074407]]}\n",
+      "{'predictions': [[0.000831353187, 0.120074868, 0.552785456, 0.00987936463, 0.208313331, 0.00213050703, 0.0306558739, 0.0036379518, 0.0693310052, 0.00236020936]]}\n",
+      "{'predictions': [[0.00284365122, 0.219364971, 0.432664514, 0.020772, 0.200447902, 0.00315438746, 0.0391481072, 0.0192343, 0.0596243665, 0.00274573546]]}\n",
+      "{'predictions': [[0.00132579298, 0.100847624, 0.510532, 0.0210976154, 0.15261063, 0.00126931153, 0.0468352474, 0.00906759314, 0.153121889, 0.003292243]]}\n",
+      "{'predictions': [[0.000646409462, 0.083442688, 0.772507727, 0.00991513766, 0.0823320076, 0.000599695952, 0.0104787266, 0.0100289239, 0.0294341184, 0.000614514225]]}\n",
+      "{'predictions': [[0.000665465312, 0.0924700052, 0.792513669, 0.010322392, 0.0389793031, 0.000798372144, 0.0185041316, 0.00881760195, 0.0334593058, 0.00346980523]]}\n",
+      "{'predictions': [[0.000999733107, 0.117568776, 0.50835222, 0.00760547444, 0.192571685, 0.000939015415, 0.0373838656, 0.00708322553, 0.125456527, 0.00203944184]]}\n",
+      "{'predictions': [[0.000852248922, 0.123018786, 0.586152613, 0.00976038538, 0.181206152, 0.00210775784, 0.0333217718, 0.00450159563, 0.0558199398, 0.00325872377]]}"
      ]
     }
    ],
    "source": [
+    "import json\n",
     "for i in range(20):\n",
     "    data = {\n",
     "                \"signature_name\": \"serving_default\", \"instances\": [np.random.rand(NUM_FEATURES).tolist()]\n",
