--- a/notebooks/ml/Distributed_Training/mirrored_strategy/mirroredstrategy_mnist_example.ipynb
+++ b/notebooks/ml/Distributed_Training/mirrored_strategy/mirroredstrategy_mnist_example.ipynb
@@ -14,7 +14,7 @@
     "</a></h1> \n",
     "</p>\n",
     "\n",
-    "![hops.png](../../../images/hops.png)\n",
+    "![hops.png](../../images/hops.png)\n",
     "\n",
     "## The `hops` python module\n",
     "\n",
@@ -75,42 +75,21 @@
     "As demonstrated in the gif it provides general information about the experiment and the resulting metric. Experiments can be visualized meanwhile or after training in a TensorBoard.\n",
     "<br>\n",
     "<br>\n",
-    "![Image7-Monitor.png](../../../images/experiments.gif)"
+    "![Image7-Monitor.png](../../images/experiments.gif)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting Spark application\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>65</td><td>application_1594231828166_0152</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://resourcemanager.service.consul:8088/proxy/application_1594231828166_0152/\">Link</a></td><td><a target=\"_blank\" href=\"http://sn021.dli.zenuity.com:8042/node/containerlogs/container_e08_1594231828166_0152_01_000001/demo__davit000\">Link</a></td></tr></table>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SparkSession available as 'spark'.\n",
       "Finished Experiment \n",
       "\n",
-      "('hdfs://rpc.namenode.service.consul:8020/Projects/demo/Experiments/application_1594231828166_0152_1', {'metric': None, 'log': 'Experiments/application_1594231828166_0152_1/chief_0_output.log'})"
+      "('hdfs://rpc.namenode.service.consul:8020/Projects/demo/Experiments/application_1594231828166_0177_4', {'accuracy': 0.828125, 'log': 'Experiments/application_1594231828166_0177_4/chief_0_output.log'})"
      ]
     }
    ],
@@ -230,12 +209,14 @@
     "        callbacks=callbacks\n",
     "    )\n",
     "    \n",
-    "#    score = model.evaluate(data_input(validation_filenames, batch_size), steps=1)\n",
-    "#    return {'accuracy': score[1]}    \n",
+    "    score = model.evaluate(data_input(validation_filenames, batch_size), steps=1)\n",
+    "    metrics = {'accuracy': score[1]}\n",
+    "\n",
+    "    return metrics    \n",
     "\n",
     "    \n",
     "from hops import experiment\n",
-    "experiment.mirrored(mirrored_training)"
+    "experiment.mirrored(mirrored_training,  name='mnist model', local_logdir=True, metric_key='accuracy')"
    ]
   },
   {
